# flecs-lua

./: .gitignore  LICENSE  README.md  api.md  ecs.lua  meson.build  meson_options.txt
include/: flecs_lua.h
include/flecs-lua/: bake_config.h
src/: bulk.c  constants.h  ecs.c  emmy.c  entity.c  hierarchy.c  iter.c  log.c  meta.c  misc.c  module.c  os.c  pipeline.c  private.h  query.c  snapshot.c  system.c  time.c  timer.c  world.c
subprojects/: flecs-meta.wrap  flecs.wrap  lua-5.4.wrap  lua-54.wrap  lua.wrap
subprojects/packagefiles/flecs-meta/: meson.build
subprojects/packagefiles/lua/: meson.build
subprojects/packagefiles/lua-5.4/: meson.build
test/: array.lua  const.c  entity.lua  iter.lua  main.c  meta.lua  meta_limits.lua  misc.lua  module.lua  pair.lua  pipeline.lua  prefab.lua  query.lua  snapshot.lua  system.lua  test.c  test.h  timer.lua  trait.lua  util.lua
test/modules/: test.lua
